try ParNew + CMS GC